--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "chalk": "^2.4.1",
-    "request": "^2.88.0",
+    "dotenv": "^6.1.0",
     "twit": "^2.2.11",
     "vorpal": "^1.12.0"
   },
