--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "horus",
   "version": "0.0.1",
-  "description": "Command runs application -> if user has not been set up, prompts for login (or API key?) -> loads home feed",
-  "main": "app.js",
+  "bin":{
+    "horus": "./bin/index.js"
+  },
+  "preferGlobal": true,
+  "description": "A lightweight Twitter CLI",
   "dependencies": {
     "chalk": "^2.4.1",
+    "commander": "^2.19.0",
     "dotenv": "^6.1.0",
-    "twit": "^2.2.11",
-    "vorpal": "^1.12.0"
+    "inquirer": "^6.2.1",
+    "twit": "^2.2.11"
   },
   "devDependencies": {},
   "scripts": {
